# podlewajnik

./: .gitignore  README.md  package-lock.json  package.json
firstsfc/: README.md  index.html  package-lock.json  package.json  tsconfig.json
firstsfc/e2e/: landing.spec.ts
firstsfc/src/: App.vue  main.ts
firstsfc/src/assets/: global.css
firstsfc/src/components/: LandingPage.vue  LoginPage.vue  MainPage.vue  RegisterPage.vue
firstsfc/src/router/: index.ts
podlewajnik_backend/: README.md  pyproject.toml
podlewajnik_backend/src/podlewajnik/: main.py
podlewajnik_backend/src/podlewajnik/auth/: jwthandler.py  users.py
podlewajnik_backend/src/podlewajnik/crud/: plants.py  users.py
podlewajnik_backend/src/podlewajnik/database/: config.py  models.py
podlewajnik_backend/src/podlewajnik/routes/: plants.py  users.py
podlewajnik_backend/src/podlewajnik/schemas/: plants.py  users.py
podlewajnik_front/: .prettierignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json
podlewajnik_front/e2e/: landing.spec.ts  tsconfig.json
podlewajnik_front/e2e/fixtures/: login.fixture.ts
podlewajnik_front/e2e/helpers/: helpers.ts
podlewajnik_front/e2e/pages/: login.page.ts  register.page.ts
podlewajnik_front/e2e/test_cases/: addNewPlant.md  editPlant.md  login.md  register.md
podlewajnik_front/e2e/test_data/: login.data.ts  plant.data.ts  register.data.ts
podlewajnik_front/e2e/tests/: addPlant.spec.ts  e2e.spec.ts  editPlant.spec.ts  landing.spec.ts  login.spec.ts  (+1 more)
podlewajnik_front/src/: App.vue  main.ts
(+11 files in other folders)
