[tool.poetry]
name = "podlewajnik"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pyright = "^1.1.368"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
